--- a/styles.css
+++ b/styles.css
@@ -1,60 +1,106 @@
 body {
-    box-sizing: border-box;
-    margin:0;
-    font-family: 'Playfair Display', serif;
+  box-sizing: border-box;
+  margin: 0;
+  font-family: 'Playfair Display', serif;
   font-family: 'Quicksand', sans-serif;
   font-family: 'Raleway', sans-serif;
   font-family: 'Lato', sans-serif;
-  }
-  
-  h1 {
-    background-color:linen ; color: black;
-    /* background-image: url(material/velas.jpg  ) ; */
-    font-size: 40px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding: 30px;
-    text-align: center;
-    margin: 0;
-    width: 70%;
-    
-   margin: 20px 20px;
-  }
-  
-  nav {
-    display: flex;
-    justify-content: space-between;
-    padding:20px ;
-  }
-  
-  .contenedor {
-   width: 70%;
-   margin: 20px 20px;
-  }
-  
-  .info {
-    min-width: 100px;
-     padding: 30px;
-    /* margin: solid black 0.3px ; */
-    background-color: bisque;
-    text-align: center;
-  }
-  
-  .info h {
-    font-family: 'Raleway', sans-serif;
-     font-weight: 600;
-  }
-  /* 
+}
+
+h1 {
+  background-color: linen;
+  color: black;
+  /* background-image: url(material/velas.jpg  ) ; */
+  font-size: 40px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 30px;
+  text-align: center;
+  margin: 0;
+  width: 70%;
+
+  margin: 20px 20px;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+}
+/* 
+.contenedor {
+  width: 70%;
+  margin: 20px 20px;
+} */
+
+.info {
+  min-width: 100px;
+  padding: 30px;
+  /* margin: solid black 0.3px ; */
+  /* background-color: bisque; */
+  text-align: center;
+  background:rgba(11, 9, 10, 0.7);
+  color:white ;
+}
+
+.info h {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 600;
+}
+
+/* 
   .contenedor1 {
     width: 30%;
     padding: 1px 330px;
   } */
-  
-  .calendly {
-    width: cover;
-    height: 500px;
-  }
 
-  .Pl9F4D0kOr1s0KUQ1VhD {
-    height: 1000px;
+.calendly {
+  width: cover;
+  height: 500px;
+}
+
+.header {
+  font-size: 70px;
+  font-weight: 600;
+  background-image: linear-gradient(to left, #553c9a, #b393d3);
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+  background-color: #FBAB7E;
+  background-image: linear-gradient(62deg, #FBAB7E 0%, #fbf0ce 100%);
+  opacity: 0.9;
+
+}
+
+@media only screen and (max-width: 600px) {
+  .header {
+    font-size: 50px;
+  font-weight: 600;
+  background-image: linear-gradient(to left, #553c9a, #b393d3);
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+  background-color: #FBAB7E;
+  background-image: linear-gradient(62deg, #FBAB7E 0%, #fbf0ce 100%);
+  opacity: 0.9;
   }
+}
+
+/* 
+body {
+  background-image: url();
+ background-repeat: no-repeat;
+ object-fit: fill;
+ ;
+ } */
+
+ body {
+  /* The image used */
+  background-image: url("https://i.pinimg.com/564x/65/85/5c/65855c0b4ef246961d5fe93ab0867050.jpg");
+  height: 100%; 
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
