--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,7 @@ nav {
   }
 }
 
+
 /* 
 body {
   background-image: url();
@@ -96,7 +97,7 @@ body {
 
  body {
   /* The image used */
-  background-image: url("https://i.pinimg.com/564x/65/85/5c/65855c0b4ef246961d5fe93ab0867050.jpg");
+  background-image: url("https://mfiles.alphacoders.com/771/771606.jpg");
   height: 100%; 
 
   /* Center and scale the image nicely */
