--- a/styles.css
+++ b/styles.css
@@ -104,3 +104,23 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+
+.header {
+  font-size: 70px;
+  font-weight: 600;
+  background-image: linear-gradient(to left, #553c9a, #b393d3);
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+  background-color: #fbab7e;
+  background-image: linear-gradient(62deg, #fbab7e 0%, #fbf0ce 100%);
+  opacity: 0.9;
+  width: 800px;
+  margin: auto;
+  /* font-size: 20px; */
+  /* font-weight: 400; */
+  margin-bottom: 20px;
+  text-align: center;
+}
+
