--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* GENERALS */
 body {
   box-sizing: border-box;
   margin: 0;
@@ -5,6 +6,13 @@ body {
   font-family: 'Quicksand', sans-serif;
   font-family: 'Raleway', sans-serif;
   font-family: 'Lato', sans-serif;
+}
+
+
+/* MAIN */
+.info-text{
+  max-width:500px;
+  margin:auto;
 }
 
 h1 {
